--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 	font-family:"Segoue", sans-serif;
 	line-height:1.6em;
 	color:#666;
-	background:#e1e1e1;
+	background:#112527;
 	font-size:14px;
 }
 
@@ -29,6 +29,7 @@ a{
 header{
 	padding:30px 20px;
 	background:#f4f4f4; 
+	text-align: center;
 }
 
 header h1{
@@ -65,10 +66,8 @@ section{
 	padding: 11px 7px;
 	padding-right: 43px;
 	background: #fff;
-	color: #ccc;
-	border: 1px solid #c8c8c8;
+	border: 1px solid #404348;
 	font-size: 1.6em;
-	border-bottom-color: #d2e2e7;
 	-moz-border-radius: 1px;
 	-webkit-border-radius: 1px;
 	border-radius: 1px;
